--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
@@ -253,11 +253,12 @@
           >
             <ul class="nav navbar-nav flex-child-menu menu-left"></ul>
             <ul class="nav navbar-nav flex-child-menu menu-right">
-              <li><a href="/booking-history">Booking History</a></li>
+             
               <% if(!currentUser) { %>
-              <li class="loginLink"><a href="/login">LOG In</a></li>
+              <li class="loginLink"><a href="/login">LOG IN</a></li>
               <li class="btn signupLink"><a href="/signup">sign up</a></li>
               <% } else { %>
+                <li><a href="/booking-history">Booking History</a></li>
               <li><a href="/profile"><%= currentUser.displayName %></a></li>
               <li class="btn"><a href="/logout">Logout</a></li>
               <% } %>
@@ -295,7 +296,7 @@
                 /></a>
               </div>
               <div class="title-in">
-                <h6><a href="#"><%= film.displayName %></a></h6>
+                <h6><a href="/film?filmID=<%= film.uuid %>"><%= film.displayName %></a></h6>
                 <p>
                   <% let date = film.publishDate.toString().split(" "); %>
                   <%=`${date[1]} ${date[2]} ${date[3]}`%>
