--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
@@ -82,7 +82,7 @@
         <div class="row">
           <p>Or via social</p>
           <div class="social-btn-2">
-            <a class="fb" href="#"
+            <a class="fb" href="/auth/facebook"
               ><i class="ion-social-facebook"></i>Facebook</a
             >
             <a class="tw" href="#"><i class="ion-social-twitter"></i>twitter</a>
