--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
@@ -1,24 +1,36 @@
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<div style="background-image: url('images/uploads/slider-bg.jpg');height: 100vh;">
+  <div class="slider movie-items">
+    <div class="title-hd">
+      <h1 class="bd-hd" >Choose the Cinema You want to go</h1>
+    </div>
+  </div>
+  <div class="movie-item" style="margin-left: 50vh;">
+    <% cinemas.forEach(cinema => { %>
+    <button
+      class="item"
+      data-id="<%= cinema.uuid %>"
+      style="
+        display: block;
+        cursor: pointer;
+        width: 200px;
+        height: 100px;
+        border: 1px solid black;
+        margin-top: 12px;
+        text-align: center;
+        border-radius:20px;
+      "
+    >
+      <h2><%= cinema.displayName %></h2>
+      <% }) %>
+    </button>
+  </div>
+</div>
 
-<h1>Choose the Cinema You want to go</h1>
 
-<% cinemas.forEach(cinema => { %>
-<button
-  class="item"
-  data-id="<%= cinema.uuid %>"
-  style="
-    display: block;
-    cursor: pointer;
-    width: 200px;
-    height: 100px;
-    border: 1px solid black;
-    margin-top: 12px;
-    text-align: center;
-  "
->
-  <h2><%= cinema.displayName %></h2>
-</button>
-<% }) %>
+
+
 
 <script>
   function getParameterURLByName(name, url = window.location.href) {
