--- a/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
@@ -1,31 +1,35 @@
-    <div class="hero common-hero">
-      <div class="hero-ct">
+<div class="hero common-hero">
+    <div class="hero-ct">
         <h1>My tickets</h1>
-      </div>
     </div>
-    <!-- blog list section-->
-    <div class="page-single">
-      <div class="container">
+</div>
+<!-- blog list section-->
+<div class="page-single">
+    <div class="container">
         <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <% bookingHistory.forEach(booking => { %> 
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <% if(bookingHistory) { %> <% bookingHistory.forEach(booking =>
+                { %>
                 <div class="blog-item-style-1 blog-item-style-3">
-                    <img src="/admin/manage-film/poster/<%- booking.id_Film %>" alt="" />
+                    <img
+                        src="/admin/manage-film/poster/<%- booking.id_Film %>"
+                        alt=""
+                    />
                     <div class="blog-it-infor">
-                      <h3>
-                        <a href="blogdetail.html"><%= booking.film_name %></a>
-                      </h3>
-                      <div class="container">
-                        <p>Ngày đặt: <%= booking.date %></p>
-                        <p>Rạp: <%= booking.cinema_name %></p>
-                        <p>Ghế: <%= booking.chair %></p>
-                      </div>
+                        <div class="container">
+                            <h3>
+                                <a href="#" aria-disabled="true"
+                                    ><%= booking.film_name %></a
+                                >
+                            </h3>
+                            <p>Ngày đặt: <%= booking.date %></p>
+                            <p>Rạp: <%= booking.cinema_name %></p>
+                            <p>Ghế: <%= booking.chair %></p>
+                        </div>
                     </div>
-                  </div>
-            <% }) %>
-
-          </div>
+                </div>
+                <% })}%>
+            </div>
         </div>
-      </div>
     </div>
-
+</div>
