--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
@@ -15,14 +15,16 @@
         display: block;
         cursor: pointer;
         width: 200px;
-        height: 100px;
+        height: 30px;
+        color: white;
+        background-color: rgb(94, 93, 206);
         border: 1px solid black;
         margin-top: 12px;
         text-align: center;
-        border-radius:20px;
+        border-radius: 10px;
       "
     >
-      <h2><%= cinema.displayName %></h2>
+      <h2 style="font-size: 15px;"><%= cinema.displayName %></h2>
       <% }) %>
     </button>
   </div>
