--- a/v3/WebPrograming2_Final-Project/src/views/ShowTime/ShowTime.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/ShowTime/ShowTime.ejs
@@ -1,4 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<link rel="stylesheet" href="css/style.css">
 <div style="background-image: url('images/uploads/slider-bg.jpg');height: 100vh;">
 <div class="slider movie-items">
     <div class="title-hd">
@@ -6,22 +7,24 @@
     </div>
   </div>
 <div class="movie-item" style="margin-left: 50vh;">
-<% showtimes.forEach(element => { %>
+<% showTimeAfterFormatDate.forEach(showtime => { %>
 <button
   class="item"
-  data-id="<%= element.uuid %>"
+  data-id="<%= showtime.uuid %>"
   style="
     display: block;
-    cursor: pointer;
-    width: 300px;
-    height: 200px;
-    border: 1px solid black;
-    margin-top: 12px;
-    text-align: center;
-    border-radius:20px;
+        cursor: pointer;
+        width: 300px;
+        height: 30px;
+        color: white;
+        background-color: rgb(94, 93, 206);
+        border: 1px solid black;
+        margin-top: 12px;
+        text-align: center;
+        border-radius: 10px;
   "
 >
-  <h2><%= element.startTime %> - <%= element.endTime %></h2>
+  <h2 style="font-size: 12px;"><%= showtime.time %></h2>
 </button>
 </div>
 <% }) %>
