--- a/v3/WebPrograming2_Final-Project/src/views/dashboard/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/dashboard/layout.ejs
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Mange - Cinema</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="assets/vendors/iconfonts/mdi/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" href="/assets/vendors/iconfonts/mdi/css/materialdesignicons.min.css" />
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="assets/css/shared/style.css" />
+  <link rel="stylesheet" href="/assets/css/shared/style.css" />
   <!-- endinject -->
   <!-- Layout styles -->
-  <link rel="stylesheet" href="assets/css/demo_1/style.css" />
+  <link rel="stylesheet" href="/assets/css/demo_1/style.css" />
   <!-- End Layout styles -->
-  <link rel="shortcut icon" href="assets/favicon.ico" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
 </head>
 
 <body>
@@ -28,11 +28,11 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown d-none d-xl-inline-block user-dropdown">
             <a class="nav-link dropdown-toggle" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-              <img class="img-xs rounded-circle" src="assets/images/admin.jpg" alt="Profile image" />
+              <img class="img-xs rounded-circle" src="/assets/images/admin.jpg" alt="Profile image" />
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
               <div class="dropdown-header text-center">
-                <img class="img-md rounded-circle" src="assets/images/admin.jpg" alt="Profile image" />
+                <img class="img-md rounded-circle" src="/assets/images/admin.jpg" alt="Profile image" />
                 <p class="mb-1 mt-3 font-weight-semibold">Admin</p>
                 <p class="font-weight-light text-muted mb-0">admin</p>
               </div>
@@ -153,53 +153,14 @@
               </ul>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="menu-icon typcn typcn-th-large-outline"></i>
-              <span class="menu-title">Thống kê</span>
-            </a>
-          </li>
         </ul>
       </nav>
       <!-- partial -->
       <div class="main-panel">
         <div class="content-wrapper">
           <!-- Page Title Header Starts-->
-          <div class="row page-title-header">
-            <div class="col-md-12">
-              <div class="page-header-toolbar">
-                <div class="filter-wrapper">
-                  <div class="dropdown ml-lg-auto ml-3 toolbar-item">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownexport" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Xuất
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownexport">
-                      <button class="dropdown-item" id="exportDOCX">DOCX</button>
-                      <button class="dropdown-item" id="exportPDF" onclick="toPDF()">PDF</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- Page Title Header Ends-->
-          <div class="row">
-            <div class="col-md-8">
-              <div class="row">
-                <div class="col-md-12 grid-margin">
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="d-flex justify-content-between">
-                        <h4 class="card-title mb-0">Chưa làm layout được</h4>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+          <%- body %>
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
@@ -215,67 +176,23 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="assets/vendors/js/vendor.bundle.base.js"></script>
-  <script src="assets/vendors/js/vendor.bundle.addons.js"></script>
+  <script src="/assets/vendors/js/vendor.bundle.base.js"></script>
+  <script src="/assets/vendors/js/vendor.bundle.addons.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page-->
   <!-- End plugin js for this page-->
   <!-- inject:js -->
-  <script src="assets/js/shared/off-canvas.js"></script>
-  <script src="assets/js/shared/misc.js"></script>
+  <script src="/assets/js/shared/off-canvas.js"></script>
+  <script src="/assets/js/shared/misc.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="assets/js/demo_1/dashboard.js"></script>
+  <script src="/assets/js/demo_1/dashboard.js"></script>
   <!-- End custom js for this page-->
-  <script src="assets/js/shared/jquery.cookie.js" type="text/javascript"></script>
+  <script src="/assets/js/shared/jquery.cookie.js" type="text/javascript"></script>
 
   <!-- PDF -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 </body>
-
-<script>
-  window.exportDOCX.onclick = function() {
-    if (!window.Blob) {
-      alert('Your legacy browser does not support this action.');
-      return;
-    }
-    var html, link, blob, url, css;
-    css = (
-      '<style>' +
-      '@page WordSection1{size: 841.95pt 595.35pt;mso-page-orientation: landscape;}' +
-      'div.WordSection1 {page: WordSection1;}' +
-      'table{border-collapse:collapse;}td{border:1px gray solid;width:5em;padding:2px;}' +
-      '</style>'
-    );
-    html = window.topProductsTable.innerHTML;
-    blob = new Blob(['\ufeff', css + html], {
-      type: 'application/msword'
-    });
-    url = URL.createObjectURL(blob);
-    link = document.createElement('A');
-    link.href = url;
-    link.download = 'top-san-pham-ban-chay';
-    document.body.appendChild(link);
-    if (navigator.msSaveOrOpenBlob) navigator.msSaveOrOpenBlob(blob, 'top-san-pham-ban-chay.doc');
-    else link.click();
-    document.body.removeChild(link);
-  };
-
-  function toPDF() {
-    html2canvas(document.getElementById('topProductsTable'), {
-      onrendered: function(canvas) {
-        var data = canvas.toDataURL();
-        var docDefinition = {
-          content: [{
-            image: data,
-            width: 500
-          }]
-        };
-        pdfMake.createPdf(docDefinition).download("top-san-pham-ban-chay.pdf");
-      }
-    });
-  }
-</script>
 
 </html>
