--- a/v3/WebPrograming2_Final-Project/src/views/dashboard/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/dashboard/layout.ejs
@@ -52,7 +52,7 @@
         <ul class="nav">
           <li class="nav-item nav-category">Main Menu</li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/manage-film/report">
               <i class="menu-icon typcn typcn-document-text"></i>
               <span class="menu-title">Report</span>
             </a>
