--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/update-cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/update-cinema.ejs
@@ -11,9 +11,10 @@
   <!-- Type -->
   <label for="cinema_type">Type</label><br />
   <select name="cinema_type">
-    <option value="2D">2D</option>
-    <option value="3D">3D</option>
-    <option value="4DX">4DX</option>
+    <option value="<%= cinema.type_id %>" selected>Choose another...</option>
+    <option value="1">2D</option>
+    <option value="2">3D</option>
+    <option value="3">4DX</option>
   </select>
   <br />
 
