--- a/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
@@ -12,7 +12,7 @@
   <div class="page-single">
     <div class="container">
         <div class="col-md-9 col-sm-12 col-xs-12">
-          <div class="form-style-1 user-pro" style="width: 400px; margin-left: 150px;" action="#">
+          <div class="form-style-1 user-pro" action="#">
             <form method="POST" class="user">
               <div class="row">
                 <div class="col-md-12 form-it">
