--- a/v3/WebPrograming2_Final-Project/src/views/ShowTime/ShowTime.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/ShowTime/ShowTime.ejs
@@ -5,17 +5,17 @@
     <div class="title-hd">
       <h1 class="bd-hd">Book The Time You Can Go</h1>
     </div>
-  </div>
+</div>
 <div class="movie-item" style="margin-left: 50vh;">
 <% showTimeAfterFormatDate.forEach(showtime => { %>
 <button
   class="item"
   data-id="<%= showtime.uuid %>"
   style="
-    display: block;
+        display: inline-block;
         cursor: pointer;
         width: 300px;
-        height: 30px;
+        height: 50px;
         color: white;
         background-color: rgb(94, 93, 206);
         border: 1px solid black;
@@ -26,9 +26,10 @@
 >
   <h2 style="font-size: 12px;"><%= showtime.time %></h2>
 </button>
-</div>
 <% }) %>
 </div>
+</div>
+
 <script>
   $(function () {
     function getParameterURLByName(name, url = window.location.href) {
