--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -17,7 +17,7 @@
         <!-- Mobile specific meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="format-detection" content="telephone-no" />
-
+        <link rel="icon" href="images/title-logo-2.jpg"/>
         <!-- CSS files -->
         <link rel="stylesheet" href="/css/plugins.css" />
         <link rel="stylesheet" href="/css/style.css" />
