--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -252,7 +252,8 @@
                     </select>
                     <input
                         class="search-params"
-                        type="text"
+                        type="text" id="searchInput"
+                        name="searchInput"
                         placeholder="Search"
                     />
                 </div>
@@ -268,5 +269,24 @@
         <script src="/js/plugins.js"></script>
         <script src="/js/plugins2.js"></script>
         <script src="/js/custom.js"></script>
+        <script>
+            $('.search-params').bind("enterKey",function(e){
+                var keyw = $('#searchInput').val();
+                if(keyw.trim() == "")
+                {
+                    alert("Hãy nhập tên phim bạn muốn tìm");
+                }
+                else{
+                    window.location.href = `/search?film_name=${keyw}`;
+                }
+                
+            });
+            $('.search-params').keyup(function(e){        
+                if(e.keyCode == 13)
+                {
+                    $(this).trigger("enterKey"); 
+                }
+            });
+        </script>
     </body>
 </html>
