--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -222,6 +222,9 @@
                             class="nav navbar-nav flex-child-menu menu-left"
                         ></ul>
                         <ul class="nav navbar-nav flex-child-menu menu-right">
+                            <li>
+                                <a href="/filter">Danh sách cụm rạp</a>
+                            </li>
                             <% if(!currentUser) { %>
                             <li class="loginLink">
                                 <a href="/login">LOG IN</a>
