--- a/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="hero-ct">
-            <h1 >1 More Step</h1>
+            <h1 style="margin-left: 4px;">1 More Step</h1>
           </div>
         </div>
       </div>
@@ -17,13 +17,13 @@
               <div class="row">
                 <div class="col-md-12 form-it">
                   <label>Chair Code</label>
-                  <input style="background-color: gray; color: white;" type="text" value="<%= chairInfo.chairCode %>" readonly/>
+                  <input style="background-color: gray; color: white;" type="text" value="<%= seatChoosenList %>" readonly/>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 form-it">
                   <label>Price</label>
-                  <input style="background-color: gray; color: white;" type="text"value="45000" readonly/>
+                  <input style="background-color: gray; color: white;" name="total_money" type="text" value="<%= totalMoney %>" readonly/>
                 </div>
               </div>
               <div class="row">
