--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -238,6 +238,10 @@
                                     ><%= currentUser.displayName %></a
                                 >
                             </li>
+                            <li>
+                                <a><%= currentUser.wallet%> (VND)</a
+                                >
+                            </li>
                             <li class="btn"><a href="/logout">Logout</a></li>
                             <% } %>
                         </ul>
