--- a/v3/WebPrograming2_Final-Project/src/views/successMessage/check-email.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/successMessage/check-email.ejs
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="hero-ct">
-            <h1 style="margin-left: 12px;">PLEASE LOGIN TO USE THIS SERVICE</h1>
+            <h1>PLEASE CHECK YOUR EMAIL</h1>
           </div>
         </div>
       </div>
