--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
@@ -2,32 +2,42 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <div style="background-image: url('images/uploads/slider-bg.jpg');height: 100vh;">
   <div class="slider movie-items">
-    <div class="title-hd">
-      <h1 class="bd-hd" >Choose the Cinema You want to go</h1>
+    <div class="container">
+        <div class="title-hd">
+            <h2>Danh sách suất chiếu cho phim này: </h2>
+          </div>
+      <div class="">
+        <div class="slick-multiItemSlider">
+          <% cinemas.forEach(cinema => { %>
+            <div class="movie-item">
+              <div class="mv-img">
+                <a href="#"
+                  ><img
+                    src="https://cdn.pixabay.com/photo/2018/08/07/16/03/cinema-3590128_1280.jpg"
+                    alt=""
+                    max-width="285"
+                    max-height="437"
+                    width="auto"
+                    height="auto"
+                /></a>
+              </div>
+              <div class="title-in">
+                <h6><a href="/booking/choose-seat?filmID=<%= cinema.filmId %>&showtimeID=<%= cinema.showtimeId %>"><%= cinema.displayName %></a></h6>
+                <% let date = cinema.start.toString().split(" "); %>
+                <p style="font-weight: bold;">
+                  Suất chiếu: <u> <%=`${date[1]} ${date[2]} ${date[3]} ${date[4]}`%> </u>
+                </p>                
+              </div>
+            </div>
+            <% }); %>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="movie-item" style="margin-left: 50vh;">
-    <% cinemas.forEach(cinema => { %>
-    <button
-      class="item"
-      data-id="<%= cinema.uuid %>"
-      style="
-        display: block;
-        cursor: pointer;
-        width: 200px;
-        height: 30px;
-        color: white;
-        background-color: rgb(94, 93, 206);
-        border: 1px solid black;
-        margin-top: 12px;
-        text-align: center;
-        border-radius: 10px;
-      "
-    >
-      <h2 style="font-size: 15px;"><%= cinema.displayName %></h2>
-      <% }) %>
-    </button>
-  </div>
+    
+      
+    
+  
 </div>
 
 
