--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
@@ -83,7 +83,7 @@
                           <div class="mv-img">
                             <img
                               src="/admin/manage-film/poster/<%= film.uuid %>"
-                              alt=""
+                              alt="<%=film.displayName%>"
                               width="185"
                               height="284"
                             />
@@ -144,6 +144,30 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page-single">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="topbar-filter fw">
+              <p>Found <span><%= films.length %> movies</span> in total</p>
+            </div>
+            <div class="flex-wrap-movielist mv-grid-fw">
+                <% films.forEach(film => { %>
+                <div class="movie-item-style-2 movie-item-style-1">
+                  <img src="/admin/manage-film/poster/<%= film.uuid %>" alt="<%=film.displayName%>">
+                  <div class="hvr-inner">
+                          <a  href="/film?filmID=<%= film.uuid %>"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+                        </div>
+                  <div class="mv-item-infor">
+                    <h6><a href="/film?filmID=<%= film.uuid %>" ><%= film.displayName || "comingsoon.displayName" %></a></h6>
+                  </div>
+                </div>					
+                <% }); %>
+            </div>		
           </div>
         </div>
       </div>
