--- a/v3/WebPrograming2_Final-Project/src/views/Film/Film.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Film/Film.ejs
@@ -24,15 +24,8 @@
               <img src="/admin/manage-film/poster/<%- filmChoosen.uuid %>" alt="" />
               <div class="movie-btn">
                 <div class="btn-transform transform-vertical red">
-                  <div>
-                    <a class="item item-1 redbtn">
-                      <i class="ion-play"></i> Watch Trailer</a>
-                  </div>
-                  <div data-toggle="collapse" data-target="#watchTrailer" class="scroll">
-                    <a class="item item-2 redbtn">
-                      <i class="ion-play"></i>
-                    </a>
-                  </div>
+                  <div><a href="#" class="item item-1 redbtn"> <i class="ion-play"></i> Watch Trailer</a></div>
+                  <div><a href="<%= filmChoosen.trailer %>" class="item item-2 redbtn fancybox-media hvr-grow"><i class="ion-play"></i></a></div>
                 </div>
                 <div class="btn-transform transform-vertical">
                   <div>
