--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -123,7 +123,7 @@
                             <input
                                 type="text"
                                 name="register_phone"
-                                id="email-2"
+                                id="phone-2"
                                 placeholder="Phone..."
                                 required="required"
                             />
