verify booking success to mail

--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="/css/plugins.css" />
         <link rel="stylesheet" href="/css/style.css" />
     </head>
-    <body>
+    <body style="background-image: url('/images/uploads/slider-bg.jpg');">
         <div class="login-wrapper" id="login-content">
             <div class="login-content">
                 <a href="#" class="close">x</a>
