--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/filter.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/filter.ejs
@@ -1,33 +1,21 @@
-
     <div class="slider movie-items">
         <div class="container">
             <div class="title-hd">
                 <h2>Danh sách tất cả cụm rạp</u></u></a></h2>
-              </div>
-          <div class="row">
-            <div class="slick-multiItemSlider">
-              <% clusters.forEach(clus => { %>
-              <div class="movie-item">
-                <div class="mv-img">
-                  <a href="#"
-                    ><img
-                      src="https://png2.cleanpng.com/sh/585754c02b851fd6fa41f8d267fedf8a/L0KzQYm3VsIxN5h2h5H0aYP2gLBuTfxwb5Cye9t3ZX3kPbfwjP0uaqNmhtY2aX7nhcT7kwkua5pzfd9qLXzyd7E0VfIzamE8faMDY3TlRYq1UcY3QGI9T6c6NUK8RYW9V8IyPWg8RuJ3Zx==/kisspng-logo-cinema-film-brand-industry-cinema-logo-5b2b07e18cdb59.166818751529546721577.png"
-                      alt=""
-                      max-width="285"
-                      max-height="437"
-                      width="auto"
-                      height="auto"
-                  /></a>
-                </div>
-                <div class="title-in">
-                  <h6><a href="/filter/cinemas?cluster_Id=<%= clus.uuid %>"><%= clus.displayName %></a></h6>
-                  <p>
-                    Address: <%= clus.address %>
-                  </p>                
-                </div>
-              </div>
-              <% }); %>
             </div>
+          <div class="row">
+            <div class="flex-wrap-movielist mv-grid-fw">
+              <% clusters.forEach(clus => { %>
+              <div class="movie-item-style-2 movie-item-style-1">
+                <a href="/filter/cinemas?cluster_Id=<%= clus.uuid %>">
+                    <img src="/images/Cluster.jpg">
+                </a>
+                <div class="mv-item-infor">
+                  <h6><a href="/filter/cinemas?cluster_Id=<%= clus.uuid %>"><%= clus.displayName || "comingsoon.displayName" %></a></h6>
+                </div>
+              </div>					
+              <% }); %>
+          </div>
           </div>
         </div>
       </div>
