--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
@@ -13,7 +13,7 @@
               <div class="mv-img">
                 <a href="#"
                   ><img
-                    src="https://cdn.pixabay.com/photo/2018/08/07/16/03/cinema-3590128_1280.jpg"
+                    src="/images/cinema.jpg"
                     alt=""
                     max-width="285"
                     max-height="437"
