--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/filterCinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/filterCinema.ejs
@@ -11,7 +11,7 @@
                 <% var i = 0; cinemas.forEach(cinema => { %>
                 <div class="blog-item-style-1 blog-item-style-3">
                     <img
-                        src="https://banner2.cleanpng.com/20180419/tdq/kisspng-film-cinema-logo-cinema-x-chin-5ad8baa1dec9f4.9139666015241529939126.jpg"
+                        src="/images/Cluster2.jpg"
                         alt="Film Image"/>
                     <div class="blog-it-infor">
                         <div class="container" style="margin-bottom: 20px;">
