--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/searchCluster.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/searchCluster.ejs
@@ -11,8 +11,7 @@
                 <div class="mv-img">
                   <a href="#"
                     ><img
-                      src="https://png2.cleanpng.com/sh/585754c02b851fd6fa41f8d267fedf8a/L0KzQYm3VsIxN5h2h5H0aYP2gLBuTfxwb5Cye9t3ZX3kPbfwjP0uaqNmhtY2aX7nhcT7kwkua5pzfd9qLXzyd7E0VfIzamE8faMDY3TlRYq1UcY3QGI9T6c6NUK8RYW9V8IyPWg8RuJ3Zx==/kisspng-logo-cinema-film-brand-industry-cinema-logo-5b2b07e18cdb59.166818751529546721577.png"
-                      alt=""
+                      src="/images/Cluster.jpg"
                       max-width="285"
                       max-height="437"
                       width="auto"
