--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -77,8 +77,8 @@
                         <a class="fb" href="/auth/facebook"
                             ><i class="ion-social-facebook"></i>Facebook</a
                         >
-                        <a class="tw" href="#"
-                            ><i class="ion-social-twitter"></i>twitter</a
+                        <a class="tw" href="/authGg/google"
+                            ><i class="ion-social-google"></i>Google</a
                         >
                     </div>
                 </div>
