Add new feature: Send Ticket Info via SMS

--- a/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
@@ -22,7 +22,7 @@
                                     ><%= booking.film_name %></a
                                 >
                             </h3>
-                            <p>Ngày đặt: <%= booking.date %></p>
+                            <p>Ngày đặt: <%= booking.bookDate %></p>
                             <p>Rạp: <%= booking.cinema_name %></p>
                             <p>Ghế: <%= booking.chair %></p>
                         </div>
