Send SMS: Fix some bugs

--- a/v3/WebPrograming2_Final-Project/src/views/error/error.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/error/error.ejs
@@ -5,6 +5,6 @@
     </div>
   </div>
   <div class="movie-item" style="margin-left: 50vh;">
-    <img src="/images/404-error.jpg">
+    <img src="/images/500-error.png">
   </div>
 </div>
